--- a/KnownProblemApi/KnownProblemApi.csproj
+++ b/KnownProblemApi/KnownProblemApi.csproj
@@ -5,17 +5,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Repository\" />
+    <Folder Include="Models\Repository\Services\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Models\Context\Tag.cs" />
   </ItemGroup>
 
 </Project>
