--- a/KnownProblemApi/appsettings.json
+++ b/KnownProblemApi/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=KnownProblem;ConnectRetryCount=0;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
