--- a/KnownProblemApi/KnownProblem.Api.csproj
+++ b/KnownProblemApi/KnownProblem.Api.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Repository\Services\" />
+    <Compile Remove="Controllers\ValuesController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -22,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Models\Context\Tag.cs" />
+    <ProjectReference Include="..\KnownProblem.Data\KnownProblem.Data.csproj" />
   </ItemGroup>
 
 </Project>
