--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -14,7 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KnownProblemApi\KnownProblem.Api.csproj" />
+    <ProjectReference Include="..\KnownProblem.Api\KnownProblem.Api.csproj" />
+    <ProjectReference Include="..\KnownProblem.Data\KnownProblem.Data.csproj" />
   </ItemGroup>
 
 </Project>
